--- a/templates/index.html
+++ b/templates/index.html
@@ -3,41 +3,18 @@
 
 <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="Downloading FaceBook Video Easly">
-    <meta name="author" content="Cursor">
     <title>Facebook Video Downloader</title>
-
-    <meta name="theme-color" content="#563d7c">
-
-
-    <style>
-        .bd-placeholder-img {
-            font-size: 1.125rem;
-            text-anchor: middle;
-            -webkit-user-select: none;
-            -moz-user-select: none;
-            -ms-user-select: none;
-            user-select: none;
-        }
-
-        @media (min-width: 768px) {
-            .bd-placeholder-img-lg {
-                font-size: 3.5rem;
-            }
-        }
-    </style>
 </head>
 
 <body class="text-center">
-    <div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
-        <main role="main" class="inner cover">
-            <h1 class="cover-heading">Facebook Video Downloader</h1>
-            <p class="lead">Download Videos From Facebook</p>
-            <p class="lead">
+    <div>
+        <main>
+            <h1>Facebook Video Downloader</h1>
+            <p>Download Videos From Facebook</p>
+            <p>
                 <form action="/download" method="post">
-                    <input type="text" class="form-control" placeholder="Enter video url here" name="url">
-                    <button type="submit" class="btn btn-success mt-3">Download</button>
+                    <input type="text" placeholder="Enter video url here" name="url">
+                    <button type="submit">Download</button>
                 </form>
             </p>
         </main>
