--- a/templates/index.html
+++ b/templates/index.html
@@ -6,7 +6,7 @@
     <title>Facebook Video Downloader</title>
 </head>
 
-<body class="text-center">
+<body>
     <div>
         <main>
             <h1>Facebook Video Downloader</h1>
